# RAPID

./: CMakeLists.txt
housekeeping/: equipment.py  sql.py
src/: caen-digitiser.h  daq-controller.h  daq-stage-traits.h  daq-traits.h  dsp-stage-traits.h  filter.h  frontend-traits.h  hamming-window.h  hann-window.h  kaiser-window.h  main_midas.cpp  midas-traits.h  noise-generator.h  psd.h  sine-generator.h  spsc-queue.h  stage-snapshot.h  window-traits.h
tests/: efficiency_test.py  filter_test.cpp  mixer_test.cpp
webserver/: daq-event-receiver.py
webserver/templates/: interactive.html
